[build-system]
requires = ["setuptools", "wheel", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "ipb"
description = "A Python project generated with grok-ai/py-template."
dynamic = ["version"]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [

    "rich",

    "python-dotenv",

    "GitPython",

    "pre-commit",

    "python-telegram-bot",

    "ipb", # Add the current package name as a fixed dependency
]

maintainers = [{ name = "Valentino Maiorca" }]

[tool.uv.sources]
ipb = { workspace = true }

[tool.pytest.ini_options]
minversion = "6.2"
addopts = "-ra"
testpaths = ["src/tests"]

[tool.mypy]
files = ["src/**/*.py", "src/tests/**/*.py"]
ignore_missing_imports = true

[tool.ruff]
exclude = [".git", ".venv", "build", "dist", "node_modules"]
line-length = 88
indent-width = 4
target-version = "py38"

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
